# dynamics-2015

./: .gitignore  README.md  debug_forward_kinematics.py  forward_kinematics.py  forward_kinematics_test.py  inverse_kinematics.py  path_polynomial_7.py  symbolic_forward_kinematics.py  test_forward_kinematics.py  ur5_arm_model.m
kinematics_path_planning/: demo.py  effector_pose.py  forward_kinematics.py  inverse_kinematics.py  path_cartesian.py  path_polynomial_7.py  test_euler_angle_calculation.py  test_forward_kinematics.py
ur5_model/: CMakeLists.txt  package.xml  urdf.rviz
ur5_model/launch/: ur5_model.launch
ur5_model/meshes/: ur5.urdf.xacro
ur5_model/msg/: JointAngles.msg
ur5_model/src/: arm_visualizer.cpp  arm_visualizer.h  basic_ur5_rviz.urdf.xacro  test_arm_motion.py
